<resources>

    <string name="app_name">Scanner</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="opticol">Opticol</string>
    <string name="symbol">Symbol</string>
    <string name="honyware">Honyware</string>
    <string name="se4500">Se4500</string>
    <string name="title_activity_main">Scanner</string>
    <string name="set_scanner_manager">Scanner Setting</string>
    <string name="scanner">Scan</string>
    <string name="start">Start Scan</string>
    <string name="close">Stop Scan</string>
    <string name="scanner_on">Turn on scanner power</string>
    <string name="scanner_off">Turn off scanner power</string>
    <string name="scanner_keyboard_mode">Keyboard mode</string>
    <string name="scanner_keyboard_output">Keyboard output</string>
    <string name="scanner_keyboard_output_summary">Keyboard output scan results to focus the edit box</string>
    <string name="scanner_beep">Sounds</string>
    <string name="scanner_beep_summary">Play sound when the scan is successful</string>
    <string name="scanner_vibrate">Vibrate</string>
    <string name="scanner_vibrate_summary">Vibrate when the scan is successful</string>
    <string name="scanner_enter">Additional enter key</string>
    <string name="scanner_enter_summary">Additional enter key after the scan results</string>
    <string name="scanner_lock">Scan key</string>
    <string name="scanner_lock_on">Enable Scan key</string>
    <string name="scanner_lock_off">Disable Scan key</string>
    <string name="scanner_reset_def">Reset Scanner</string>
    <string name="scanner_reset_def_summary">Reset the scanner device</string>
    <string name="scanner_toast">Scanner reset finished!</string>
    <string name="scanner_hint">At the barcode and press the scan button on the device for bar code</string>
    <string name="close_zone">Close zone</string>
    <string name="zone">Zone</string>
    <string name="title_activity_zone_select">Select zone</string>
    <string name="accept">Ok</string>
    <string name="create">Create</string>
    <string name="Search">Search</string>
    <string name="OpenZone">Open zone</string>
    <string name="Accept">Accept</string>
    <string name="title_activity_workflow_selection">WorkflowSelection</string>
    <string name="no">no</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password" translatable="false">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_login">Login</string>
    <string name="error_invalid_login">The login is invalid</string>
    <string name="title_activity_blind_scan">BlindScanActivity</string>
    <string name="Add">Add</string>
    <string name="first_scan">First scan</string>
    <string name="second_scan">Second scan</string>
    <string name="blind_scan">Blind scan</string>
    <string name="pick_zone">Pick zone</string>
    <string name="title_activity_select_inventorization">SelectInventorization</string>
</resources>
