<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/zoneText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:padding="20dp"
        android:text="Выбор зоны"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/actionType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_weight="0.10" />

    <EditText
        android:id="@+id/scan_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/zoneText"
        android:layout_marginTop="19dp"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/scanner_hint"
        android:inputType="none"
        android:maxLines="1" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_weight="0.98"
        android:text="Название зоны"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/findButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:text="@string/Search"
            android:visibility="visible" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_weight="1"
            android:elevation="10dp"
            android:enabled="false"
            android:text="@string/OpenZone"
            android:visibility="visible" />

        <Button
            android:id="@+id/createButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/create"
            android:visibility="gone" />

        <Button
            android:id="@+id/goBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goToActionTypeSelect"
            android:text="К выбору действия"
            android:visibility="visible" />
    </LinearLayout>

</LinearLayout>
